--- a/nfthub/package.json
+++ b/nfthub/package.json
@@ -9,6 +9,7 @@
     "emoji-picker-react": "^4.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
