--- a/nfthub/package.json
+++ b/nfthub/package.json
@@ -13,7 +13,8 @@
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
