--- a/nfthub/package.json
+++ b/nfthub/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "alchemy-sdk": "^2.4.3",
+    "babel-plugin-macros": "^3.1.0",
+    "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.7",
     "jquery": "^3.6.3",
     "react": "^18.2.0",
