--- a/nfthub/package.json
+++ b/nfthub/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hooks-global-state": "^2.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
