--- a/nfthub/package.json
+++ b/nfthub/package.json
@@ -14,16 +14,19 @@
     "babel-plugin-macros": "^3.1.0",
     "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.7",
+    "ethers": "^5.6.1",
     "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.1.0",
+    "react-hot-toast": "^2.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.2",
-    "web3-utils": "^1.8.2"
+    "web3-utils": "^1.8.2",
+    "ws": "^8.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
