--- a/nfthub/package.json
+++ b/nfthub/package.json
@@ -7,15 +7,19 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@metamask/detect-provider": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uniswap/widgets": "^2.47.10",
     "alchemy-sdk": "^2.4.3",
     "babel-plugin-macros": "^3.1.0",
+    "bignumber.js": "^9.1.1",
     "dotenv": "^16.0.3",
     "emoji-picker-react": "^4.4.7",
     "ethers": "^5.6.1",
     "jquery": "^3.6.3",
+    "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hooks-global-state": "^2.1.0",
