--- a/nfthub/Dockerfile
+++ b/nfthub/Dockerfile
@@ -1,7 +1,16 @@
-FROM node:alpine
-WORKDIR '/app'
+# FROM node:alpine
+# WORKDIR '/app'
+# COPY package.json .
+# RUN npm install
+# COPY . .
+# CMD ["npm", "start"]
 
+FROM node:16 AS ui-build
+WORKDIR "./app"
 COPY package.json .
-RUN npm install
+RUN npm install && npm run build
 COPY . .
-CMD ["npm", "start"]
+
+EXPOSE 3080
+
+CMD ["DISABLE_ESLINT_PLUGIN=true", "npm", "start"]
