--- a/nfthub/public/manifest.json
+++ b/nfthub/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "NFTHub",
-  "name": "NFTHub With Soul Bound NFTs",
+  "short_name": "BlockVerse",
+  "name": "BlockVerse With Soul Bound NFTs",
   "icons": [
     {
       "src": "favicon.ico",
